# Hand-Eye-Calibration

./: README.md  pyproject.toml
example/: example.py
example/data/: CalibrationProgram.txt
src/eye_in_hand/: __init__.py  hand_eye_calibrator.py
src/eye_in_hand/configs/: ABB.yaml
src/eye_in_hand/image_processing/: camera_model.py  detector.py
src/eye_in_hand/robot_model/: robot_model.py
src/gui/: README.md  pyproject.toml
src/gui/hec_gui/: __init__.py  __main__.py  _eel_funcs.py
src/gui/hec_gui/vueapp/HandEyeCalibration/src/components/: Calibration.vue  RobPrgLoader.vue
src/gui/hec_gui/vueapp/HandEyeCalibration/src/components/3DViews/: HECalResultView.vue  RobPosesView.vue
src/gui/hec_gui/vueapp/HandEyeCalibration/src/components/Inputs/: CalibrationType.vue  CameraParams.vue  CharucoParams.vue  HECalibRes.vue
src/gui/hec_gui/vueapp/HandEyeCalibration/src/components/World/: World.vue
src/hand_eye_calibration/: __init__.py  __main__.py  hand_eye_calibrator.py
src/hand_eye_calibration/configs/: __init__.py  charuco_board.yaml
src/hand_eye_calibration/image_processing/: camera_model.py  charuco_detector.py  charucodetector.py  detector.py
src/hand_eye_calibration/robot_model/: robot_model.py
src/hand_eye_calibration/robot_model/model_data/: UR.yaml
src/hec_gui/: README.md  __init__.py  __main__.py  _eel_funcs.py
src/hec_gui/vueapp/HandEyeCalibration/: README.md  package-lock.json
src/hec_gui/vueapp/HandEyeCalibration/src/: main.js  pyFuncs.js
src/hec_gui/vueapp/HandEyeCalibration/src/components/: GenericTitledList.vue
src/hec_gui/vueapp/HandEyeCalibration/src/components/Inputs/: InputsPath.vue  ProgramInput.vue  RobotType.vue  SavePath.vue
src/ui/: __init__.py  __main__.py  _eel_funcs.py
src/ui/vueapp/: Dockerfile  compose.yaml
src/ui/vueapp/HandEyeCalibration/: index.html  package.json
src/ui/vueapp/HandEyeCalibration/src/: App.vue  store.js
src/ui/vueapp/HandEyeCalibration/src/assets/: main.css
src/ui/vueapp/HandEyeCalibration/src/components/: ImageLoader.vue  ImagesTable.vue
(+3 files in other folders)
